klassic-note-web/index.css
/*Variables*/
:root {
  --primary: #0065ff;
  --secondary: #609fff;
  --background: #fff;
  --foreground: #000;
}

.darked:root {
  --primary: #00e4ff;
  --secondary: #00abbf;
  --background: #000;
  --foreground: #fff;
}

html {
	font-family: Open Sans;
}

body {
	margin: 0;
}

#overlay {
	text-align: center;
    position: absolute;
    z-index: 99;
    opacity: 0.5;
    color: var(--foreground);
    background-color: transparent;
    width: 100%;
    left: 0;
    right: 0;
}

#random-count {
	font-weight: normal;
	font-size: small;
}

#search, #options {
    width: 100%;
	box-sizing: border-box;
	font-size: 1em;
}

#search-buttons a {
	font-size: 24px;
}

#tab-homepage {
}

#tab-list {
	resize: vertical;
	overflow: auto;
	/* padding: 3px; */
	margin: auto;
}

#header {
	background-color: transparent;
}

#cover {
	display: none;
	position: absolute;
	right: 5px;
	top: 0;
	z-index: -1;
}

.overlay-background {
    filter: opacity(50%);
    background-repeat: no-repeat;
    background-size: 50%;
    background-position: top right;
}

.darked .overlay-background {
    filter: opacity(75%);
}


.absolute {
	position: absolute;
	padding: 0 5px;
}

.award-winner {
	position: absolute;
	right: 0;
}

.bordered td, .bordered th {
	border: 1px solid gray;
}

.darked .bordered td, .darked .bordered th {
	border: 1px solid var(--foreground);
}

.centered {
	/* max-width: 640px; */
	margin: auto;
	padding: 2px 8px;
}

.centered-text {
	text-align: center;
}

.content-box {
  border: 1px solid gray;
  box-shadow: 3px 3px;
  /* padding: 4px; */
  white-space: normal;
  width: 100%;
}

.darked .content-box {
  border: 1px solid var(--foreground);
}

.content-table {
	
}

.content-table tr:hover {
	background-color: initial;
}

.drop-area {
	position: fixed;
	top: 0;
	left: 0;
	overflow: hidden;
	width: 100vw;
	height: 100vh;
	z-index: 1;
	background-color: var(--background);
	opacity: 1;
	display: none;
}

.drop-fade {
	opacity: 0.2;
	display: block;
}

.module {
	padding: 5px 10px;
}

.list {
	border-collapse: collapse;
	font-size: 0.9em;
	width: 95%;
}

.list td, 
.list th {
	padding: 2px 4px; 
	font-size: 0.9em;
}

.list th {
    white-space: nowrap;	
}

.list tr:hover > td {
	background-color: lightgray;
}

.darked .list tr:hover > td {
	background-color: gray;
}

.highlight {
	background-color: lightgray;
}

.darked .highlight {
	background-color: gray;
}
.header-element {
	margin: 20px 0;
	margin-bottom: 0;
}

.invisible {
	visibility: hidden;
}

.material-icons {
	font-size: 20px;
	vertical-align: bottom;
	/* cursor: pointer; */
	text-decoration: none;
	color: var(--foreground);
}

.darked .material-icons {
	color: var(--foreground);
}

.no-highlight tr:hover {
	background-color: initial;
}

.darked .no-highlight tr:hover {
	background-color: initial;
}

.not-selectable {
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.tab {
	display: none;
    overflow-y: auto;
}

.tab-button {
	padding: 6px 12px;
	text-transform: uppercase;
}

.tab-view {
	vertical-align: top;
}

.tags {
	display: flex;
	flex-wrap: wrap;
    justify-content: center;
}

.tags .tag {
	width: auto;
	margin: 4px;
	cursor: pointer;
	flex-basis: 14%;
	text-align: center;
	padding: 4px;
}

.tags .tag:hover {
	background-color: lightgray;
}

.darked .tags .tag:hover {
	background-color: gray;
}

.player {
	width: 100%;
	display: none;
}

.settings {
	padding: 20px 0;
}

.settings .material-icons {
	font-size: 24px;
}

.year {
	padding: 5px;
	cursor: pointer;
}

.action {
	position: absolute;
	right: 20px;
	top: 10px;
}

.context {
	background-color: var(--background);
	font-size: 0.9em;
	position: fixed;
	width: auto;
	max-width: 40vw;
	max-height: 80vh;
	overflow-y: auto;
}

.loader {
	display: flex;
    justify-content: center;
	padding: 10px;
    font-size: 24px;
}

.hidden {
	display: none;
}

.playlist .tag {
	text-align: initial;
}

.touchable .list td, 
.touchable .list th {
	padding: 8px 4px;
}

.touchable .tab-button {
	padding: 10px;
}

